--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stylelint",
+  "name": "@leetcode/stylelint",
   "version": "6.8.0",
   "description": "Modern CSS linter",
   "keywords": [
@@ -47,7 +47,7 @@
     "multimatch": "^2.1.0",
     "normalize-selector": "^0.2.0",
     "postcss": "^5.0.20",
-    "postcss-less": "^0.13.0",
+    "postcss-less": "zry656565/postcss-less#v0.15.1",
     "postcss-reporter": "^1.3.0",
     "postcss-resolve-nested-selector": "^0.1.1",
     "postcss-scss": "^0.1.3",
